--- a/src/app/pages/contrato/contrato.page.html
+++ b/src/app/pages/contrato/contrato.page.html
@@ -36,8 +36,6 @@
             <small *ngIf="garantiaNoValido">Debe seleccionar opción.</small>
         </ion-item>
         <br>
-        <ion-item>
-            <ion-button type="submit" expand="block" size="large" shape="round">Enviar Cotización</ion-button>
-        </ion-item>
+        <ion-button type="submit" expand="block" shape="round">Enviar Cotización</ion-button>
     </form>
 </ion-content>
